--- a/sass/components/_feedback.scss
+++ b/sass/components/_feedback.scss
@@ -1,11 +1,12 @@
 .card-feedback {
-    height: 151px;
+    height: 171px;
     background-color: $color-white;
     margin-top: 1em;
     display: flex;
     justify-content: space-between;
     align-items: center;
     border-radius: 10px;
+    // width: 730px;
 
     .card-feedback-container {
         display: flex;
@@ -28,6 +29,7 @@
         margin-left: 32px;
         margin-right: 40px;
         width: 40px;
+        min-width: 40px;
         height: 53px;
         border-radius: 10px;
         background-color: $color-background-grey;
@@ -60,6 +62,7 @@
 
         p {
             color: $color-feedback-blue;
+            // width: 540px;
         }
 
         button {
