--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -74,7 +74,7 @@
     grid-template-areas:
         'sidebar header header header header'
         'sidebar feedback feedback feedback feedback';
-    gap: 10px;
+    gap: 15px;
     padding: 10px;
     padding-top: 40px;
 }
